debuginfo.txt
In file included from /usr/include/c++/7.3.0/ext/alloc_traits.h:36:0,
                 from /usr/include/c++/7.3.0/bits/stl_construct.h:61,
                 from /usr/include/c++/7.3.0/vector:62,
                 from /home/stedevai/Developer/Games/stella-engine/include/stella/graphics/layer.h:3,
                 from /home/stedevai/Developer/Games/stella-engine/src/graphics/layer.cpp:1:
/usr/include/c++/7.3.0/bits/alloc_traits.h: In instantiation of ‘struct std::allocator_traits<std::allocator<const stella::graphics::Texture&> >’:
/usr/include/c++/7.3.0/ext/alloc_traits.h:50:10:   required from ‘struct __gnu_cxx::__alloc_traits<std::allocator<const stella::graphics::Texture&> >’
/usr/include/c++/7.3.0/bits/stl_vector.h:77:21:   required from ‘struct std::_Vector_base<const stella::graphics::Texture&, std::allocator<const stella::graphics::Texture&> >’
/usr/include/c++/7.3.0/bits/stl_vector.h:216:11:   required from ‘class std::vector<const stella::graphics::Texture&>’
/home/stedevai/Developer/Games/stella-engine/include/stella/graphics/renderer.h:38:35:   required from here
/usr/include/c++/7.3.0/bits/alloc_traits.h:392:27: error: forming pointer to reference type ‘const stella::graphics::Texture&’
       using pointer = _Tp*;
                           ^
/usr/include/c++/7.3.0/bits/alloc_traits.h:395:39: error: forming pointer to reference type ‘const stella::graphics::Texture&’
       using const_pointer = const _Tp*;
                                       ^
In file included from /usr/include/c++/7.3.0/bits/stl_construct.h:61:0,
                 from /usr/include/c++/7.3.0/vector:62,
                 from /home/stedevai/Developer/Games/stella-engine/include/stella/graphics/layer.h:3,
                 from /home/stedevai/Developer/Games/stella-engine/src/graphics/layer.cpp:1:
/usr/include/c++/7.3.0/ext/alloc_traits.h: In instantiation of ‘struct __gnu_cxx::__alloc_traits<std::allocator<const stella::graphics::Texture&> >’:
/usr/include/c++/7.3.0/bits/stl_vector.h:77:21:   required from ‘struct std::_Vector_base<const stella::graphics::Texture&, std::allocator<const stella::graphics::Texture&> >’
/usr/include/c++/7.3.0/bits/stl_vector.h:216:11:   required from ‘class std::vector<const stella::graphics::Texture&>’
/home/stedevai/Developer/Games/stella-engine/include/stella/graphics/renderer.h:38:35:   required from here
/usr/include/c++/7.3.0/ext/alloc_traits.h:66:23: error: no members matching ‘__gnu_cxx::__alloc_traits<std::allocator<const stella::graphics::Texture&> >::_Base_type {aka std::allocator_traits<std::allocator<const stella::graphics::Texture&> >}::allocate’ in ‘__gnu_cxx::__alloc_traits<std::allocator<const stella::graphics::Texture&> >::_Base_type {aka struct std::allocator_traits<std::allocator<const stella::graphics::Texture&> >}’
     using _Base_type::allocate;
                       ^~~~~~~~
/usr/include/c++/7.3.0/ext/alloc_traits.h:67:23: error: no members matching ‘__gnu_cxx::__alloc_traits<std::allocator<const stella::graphics::Texture&> >::_Base_type {aka std::allocator_traits<std::allocator<const stella::graphics::Texture&> >}::deallocate’ in ‘__gnu_cxx::__alloc_traits<std::allocator<const stella::graphics::Texture&> >::_Base_type {aka struct std::allocator_traits<std::allocator<const stella::graphics::Texture&> >}’
     using _Base_type::deallocate;
                       ^~~~~~~~~~
In file included from /usr/include/c++/7.3.0/x86_64-pc-linux-gnu/bits/c++allocator.h:33:0,
                 from /usr/include/c++/7.3.0/bits/allocator.h:46,
                 from /usr/include/c++/7.3.0/vector:61,
                 from /home/stedevai/Developer/Games/stella-engine/include/stella/graphics/layer.h:3,
                 from /home/stedevai/Developer/Games/stella-engine/src/graphics/layer.cpp:1:
/usr/include/c++/7.3.0/ext/new_allocator.h: In instantiation of ‘class __gnu_cxx::new_allocator<const stella::graphics::Texture&>’:
/usr/include/c++/7.3.0/bits/allocator.h:108:11:   required from ‘class std::allocator<const stella::graphics::Texture&>’
/usr/include/c++/7.3.0/bits/stl_vector.h:81:14:   required from ‘struct std::_Vector_base<const stella::graphics::Texture&, std::allocator<const stella::graphics::Texture&> >::_Vector_impl’
/usr/include/c++/7.3.0/bits/stl_vector.h:166:20:   required from ‘struct std::_Vector_base<const stella::graphics::Texture&, std::allocator<const stella::graphics::Texture&> >’
/usr/include/c++/7.3.0/bits/stl_vector.h:216:11:   required from ‘class std::vector<const stella::graphics::Texture&>’
/home/stedevai/Developer/Games/stella-engine/include/stella/graphics/renderer.h:38:35:   required from here
/usr/include/c++/7.3.0/ext/new_allocator.h:63:26: error: forming pointer to reference type ‘const stella::graphics::Texture&’
       typedef _Tp*       pointer;
                          ^~~~~~~
/usr/include/c++/7.3.0/ext/new_allocator.h:64:26: error: forming pointer to reference type ‘const stella::graphics::Texture&’
       typedef const _Tp* const_pointer;
                          ^~~~~~~~~~~~~
In file included from /usr/include/c++/7.3.0/vector:61:0,
                 from /home/stedevai/Developer/Games/stella-engine/include/stella/graphics/layer.h:3,
                 from /home/stedevai/Developer/Games/stella-engine/src/graphics/layer.cpp:1:
/usr/include/c++/7.3.0/bits/allocator.h: In instantiation of ‘class std::allocator<const stella::graphics::Texture&>’:
/usr/include/c++/7.3.0/bits/stl_vector.h:81:14:   required from ‘struct std::_Vector_base<const stella::graphics::Texture&, std::allocator<const stella::graphics::Texture&> >::_Vector_impl’
/usr/include/c++/7.3.0/bits/stl_vector.h:166:20:   required from ‘struct std::_Vector_base<const stella::graphics::Texture&, std::allocator<const stella::graphics::Texture&> >’
/usr/include/c++/7.3.0/bits/stl_vector.h:216:11:   required from ‘class std::vector<const stella::graphics::Texture&>’
/home/stedevai/Developer/Games/stella-engine/include/stella/graphics/renderer.h:38:35:   required from here
/usr/include/c++/7.3.0/bits/allocator.h:113:26: error: forming pointer to reference type ‘const stella::graphics::Texture&’
       typedef _Tp*       pointer;
                          ^~~~~~~
/usr/include/c++/7.3.0/bits/allocator.h:114:26: error: forming pointer to reference type ‘const stella::graphics::Texture&’
       typedef const _Tp* const_pointer;
                          ^~~~~~~~~~~~~
In file included from /usr/include/c++/7.3.0/vector:64:0,
                 from /home/stedevai/Developer/Games/stella-engine/include/stella/graphics/layer.h:3,
                 from /home/stedevai/Developer/Games/stella-engine/src/graphics/layer.cpp:1:
/usr/include/c++/7.3.0/bits/stl_vector.h: In instantiation of ‘class std::vector<const stella::graphics::Texture&>’:
/home/stedevai/Developer/Games/stella-engine/include/stella/graphics/renderer.h:38:35:   required from here
/usr/include/c++/7.3.0/bits/stl_vector.h:247:20: error: no members matching ‘std::vector<const stella::graphics::Texture&>::_Base {aka std::_Vector_base<const stella::graphics::Texture&, std::allocator<const stella::graphics::Texture&> >}::_M_allocate’ in ‘std::vector<const stella::graphics::Texture&>::_Base {aka struct std::_Vector_base<const stella::graphics::Texture&, std::allocator<const stella::graphics::Texture&> >}’
       using _Base::_M_allocate;
                    ^~~~~~~~~~~
/usr/include/c++/7.3.0/bits/stl_vector.h:248:20: error: no members matching ‘std::vector<const stella::graphics::Texture&>::_Base {aka std::_Vector_base<const stella::graphics::Texture&, std::allocator<const stella::graphics::Texture&> >}::_M_deallocate’ in ‘std::vector<const stella::graphics::Texture&>::_Base {aka struct std::_Vector_base<const stella::graphics::Texture&, std::allocator<const stella::graphics::Texture&> >}’
       using _Base::_M_deallocate;
                    ^~~~~~~~~~~~~
/usr/include/c++/7.3.0/bits/stl_vector.h:920:7: error: forming pointer to reference type ‘const stella::graphics::Texture&’
       data() _GLIBCXX_NOEXCEPT
       ^~~~
/usr/include/c++/7.3.0/bits/stl_vector.h:924:7: error: forming pointer to reference type ‘const stella::graphics::Texture&’
       data() const _GLIBCXX_NOEXCEPT
       ^~~~
/usr/include/c++/7.3.0/bits/stl_vector.h:953:7: error: ‘void std::vector<_Tp, _Alloc>::push_back(std::vector<_Tp, _Alloc>::value_type&&) [with _Tp = const stella::graphics::Texture&; _Alloc = std::allocator<const stella::graphics::Texture&>; std::vector<_Tp, _Alloc>::value_type = const stella::graphics::Texture&]’ cannot be overloaded
       push_back(value_type&& __x)
       ^~~~~~~~~
/usr/include/c++/7.3.0/bits/stl_vector.h:939:7: error: with ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = const stella::graphics::Texture&; _Alloc = std::allocator<const stella::graphics::Texture&>; std::vector<_Tp, _Alloc>::value_type = const stella::graphics::Texture&]’
       push_back(const value_type& __x)
       ^~~~~~~~~
make[2]: *** [CMakeFiles/stella.dir/build.make:183: CMakeFiles/stella.dir/src/graphics/layer.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:69: CMakeFiles/stella.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
